Ready to assesment bottom section IE fix

--- a/app/assets/stylesheets/companies.sass
+++ b/app/assets/stylesheets/companies.sass
@@ -20,19 +20,25 @@
         margin-left: 0
     .visual01
       background: image-url("home/visual01.png") no-repeat center 0
+      width: 300px
     .visual02
       background: image-url("home/visual02.png") no-repeat center 0
       width: 266px
     .pencil
       background: image-url("home/pencil.png") no-repeat center 0
+      width: 186px
     .file
       background: image-url("home/file.png") no-repeat center 0
+      width: 265px
     .envelop
       background: image-url("home/envelop.png") no-repeat center 0
+      width: 146px
     .group
       background: image-url("home/group.png") no-repeat center 0
+      width: 137px
     .tick
       background: image-url("home/tick.png") no-repeat center 0
+      width: 207px
 
   .assessment-list
     li
